# rai-python

./: .gitignore  CMakeLists.txt
playground/: CMakeLists.txt  graph.cpp  komo_tutorial.cpp  lgp_pick_place.cpp
tutorials/: 1-basics.ipynb
